# brainfuck

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  documentation.yaml
examples/: hello_world.bf  hello_world.rs
src/: .null-ls_173998_lib.rs  .null-ls_365093_lib.rs  .null-ls_494888_lib.rs  execution.rs  interpreter.rs  lib.rs  main.rs  syntax.rs  token.rs
