[package]
name = "brainfuck"
description = "A BrainFuck interpreter implementation"
version = "1.0.0"
authors = ["4ngelf"]
edition = "2021"
repository = "https://github.com/4ngelf/brainfuck"
license = "MIT"
keywords = ["brainfuck"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }

[dependencies.derive_more]
version = "0.99.18"
default-features = false
features = ["display", "error", "from", "deref", "deref_mut"]
